@@ -1,8 +1,8 @@
 Package: DiffBind
 Type: Package
-Version: 1.9.14
+Version: 1.9.15
 Title: Differential Binding Analysis of ChIP-Seq peak data
-Date: 2014-03-21
+Date: 2014-03-22
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gordon Brown
         <gordon.brown@cruk.cam.ac.uk>
 Maintainer: Rory Stark<rory.stark@cruk.cam.ac.uk>
@@ -13,7 +13,7 @@ License: Artistic-2.0
 LazyLoad: yes
 Depends: R (>= 2.15.0), GenomicRanges, limma, GenomicAlignments
 Imports: RColorBrewer, amap, edgeR (>= 2.3.58), gplots, grDevices,
-        stats, utils, IRanges, zlibbioc
+        stats, utils, IRanges, zlibbioc, lattice
 Suggests: DESeq, Rsamtools, DESeq2
 Enhances: rgl, parallel
 LinkingTo: Rsamtools
